--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/react": "^3.4.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
   }
 }
