--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "rehype-add-classes": "^1.0.0"
   }
 }
